--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,4 +1,4 @@
-<%- model_class = Location -%>
+<%- model_class = Comment -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
@@ -6,22 +6,24 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:user) %></th>
+      <th><%= model_class.human_attribute_name(:body) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @locations.each do |location| %>
+    <% @comments.each do |comment| %>
       <tr>
-        <td><%= link_to location.id, location_path(location) %></td>
-        <td><%= location.name %></td>
-        <td><%=l location.created_at %></td>
+        <td><%= link_to comment.id, comment_path(comment) %></td>
+        <td><%= comment.user %></td>
+        <td><%= comment.body %></td>
+        <td><%=l comment.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_location_path(location), :class => 'btn btn-mini' %>
+                      edit_comment_path(comment), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      location_path(location),
+                      comment_path(comment),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -32,5 +34,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_location_path,
+            new_comment_path,
             :class => 'btn btn-primary' %>
