--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -2,33 +2,10 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
 </div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @homes.each do |home| %>
-      <tr>
-        <td><%= link_to home.id, home_path(home) %></td>
-        <td><%=l home.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_home_path(home), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      home_path(home),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_home_path,
-            :class => 'btn btn-primary' %>
+
+<p>Welcome to the online searchable interface to the Network Rail Working Time Tables.</p>
+
+<p>We always welcome support from users to add routes and services to our database, so please feel free to sign up and contribute</p>
+
+<p>If you know what you are looking for, please select from the menu at the top of the screen and start searching!</p>
