--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -8,6 +8,27 @@
   <dd><%= @location.name %></dd>
 </dl>
 
+
+<h2>Add a comment:</h2>
+<%= form_for [@comment,@location.comments.build], :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :user, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :user, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :body, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :body, :class => 'text_field' %>
+    </div>
+  </div>
+
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+  </div>
+<% end %>
+
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               locations_path, :class => 'btn'  %>
